# vulkan-compute-boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: compile.bat  compile.sh  test.glsl  test.spv  test1.comp  test1.glsl  test1.spv  test2.comp  test2.glsl  test2.spv  test3.comp  test3.spv
src/: main.cpp
src/vulkan_base/: vulkan_base.h  vulkan_buffer.cpp  vulkan_descriptor_set.cpp  vulkan_device.cpp  vulkan_helper.cpp  vulkan_image.cpp  vulkan_pipeline.cpp
